add course info from spring/fall/summer 2020, add a placeholder script to parse into rdf, update implementations to match available content

--- a/app/query_templates/base/construct_query.sparql.j2
+++ b/app/query_templates/base/construct_query.sparql.j2
@@ -1,4 +1,4 @@
-{% include 'prefixes.sparql.j2' %}
+{% include 'base/prefixes.sparql.j2' %}
 
 CONSTRUCT {
 {% block construct_triples %}{% endblock %}
