--- a/app/query_templates/constructors/constructor_course.sparql.j2
+++ b/app/query_templates/constructors/constructor_course.sparql.j2
@@ -1,11 +1,2 @@
-?courseUri a crs-rec:Course ;
-    crs-rec:hasName ?crsName ;
-    crs-rec:hasDescription ?crsDesc
-    crs-rec:hasCourseCode ?crsCode ;
-    crs-rec:hasSpecialTag ?specTag ;
-    crs-rec:hasRequiredPrerequisite ?reqPrereq ;
-    crs-rec:hasRecommendedPrerequisite ?recPrereq ;
-    crs-rec:hasDepartment ?crsDept ;
-    crs-rec:hasCredits ?crsCredits ;
-    crs-rec:hasTopic ?crsTopic ;
-    crs-rec:hasOfferedSemesters ?offeredSemester .
+?courseUri ?p ?o .
+?reqCourseUri ?rp ?ro .
