--- a/app/query_templates/constructors/constructor_course.sparql.j2
+++ b/app/query_templates/constructors/constructor_course.sparql.j2
@@ -1,2 +1,14 @@
-?courseUri ?p ?o .
-?reqCourseUri ?rp ?ro .
+?courseUri a crs-rec:Course ;
+    crs-rec:hasCourseCode ?courseCodeUri ;
+    crs-rec:hasName ?crsName ;
+    crs-rec:hasDescription ?courseDesc ;
+    crs-rec:hasDepartment ?departmentUri ;
+    crs-rec:hasCredits ?courseCredits ;
+    crs-rec:hasTopic ?topicUri ;
+    crs-rec:hasSpecialTag ?specialTag ;
+    crs-rec:hasRequiredPrerequisite ?reqPrereqCourseUri ;
+    crs-rec:hasRecommendedPrerequisite ?recPrereqCourseUri ;
+    crs-rec:hasCorequisite ?coreqCourseUri ;
+    crs-rec:hasOfferedSemesters ?offeredSemester .
+
+{% include 'constructors/constructor_course_code.sparql.j2' %}
