--- a/app/query_templates/models/requirement.sparql.j2
+++ b/app/query_templates/models/requirement.sparql.j2
@@ -1,4 +1,4 @@
 ?requirementUri crs-rec:hasCourseCodeRestriction ?courseCodeRestrictionUri ;
-    ?p ?o .
+    ?requirementPred ?requirementObj .
 
 {% include 'models/course_code_restriction.sparql.j2' %}
