use placeholder topic areas

--- a/crex/query_templates/constructors/constructor_course.sparql.j2
+++ b/crex/query_templates/constructors/constructor_course.sparql.j2
@@ -12,3 +12,4 @@
     crs-rec:hasOfferedSemesters ?offeredSemester .
 
 {% include 'constructors/constructor_course_code.sparql.j2' %}
+{% include 'constructors/constructor_topic_area.sparql.j2' %}
