first pass at recommending courses for a target semester / target student

--- a/crex/query_templates/course_section_by_semester_query.sparql.j2
+++ b/crex/query_templates/course_section_by_semester_query.sparql.j2
@@ -6,8 +6,8 @@
     {% include 'base/value_constraint.sparql.j2' %}
 {% endblock %}
 {% block expressions %}
-?semesterScheduleUri crs-rec:hasSemester ?semesterStr ;
-    crs-rec:hasSemesterYear ?semesterYearInt .
+?semesterScheduleUri crs-rec:hasTerm ?termStr ;
+    crs-rec:hasYear ?yearInt .
 ?courseSectionUri crs-rec:hasSchedule ?semesterScheduleUri .
     {% include 'models/course_section.sparql.j2' %}
 {% endblock %}
