--- a/crex/query_templates/models/semester_schedule.sparql.j2
+++ b/crex/query_templates/models/semester_schedule.sparql.j2
@@ -1,2 +1,2 @@
-?semesterScheduleUri crs-rec:hasSemester ?semesterStr ;
-    crs-rec:hasSemesterYear ?semesterYearInt .
+?semesterScheduleUri crs-rec:hasTerm ?termStr ;
+    crs-rec:hasYear ?yearInt .
