add content to query for students and plan-of-studys

--- a/crex/query_templates/constructors/constructor_semester_schedule.sparql.j2
+++ b/crex/query_templates/constructors/constructor_semester_schedule.sparql.j2
@@ -1,3 +1,3 @@
 ?semesterScheduleUri a crs-rec:SemesterSchedule ;
-    crs-rec:hasTerm ?termStr ;
-    crs-rec:hasYear ?yearInt .
+    crs-rec:hasTerm ?semesterTermStr ;
+    crs-rec:hasYear ?semesterYearInt .
