--- a/crex/query_templates/constructors/constructor_department.sparql.j2
+++ b/crex/query_templates/constructors/constructor_department.sparql.j2
@@ -1,2 +1,2 @@
-?departmentUri a crs-rec:Department ;
-    crs-rec:hasName ?departmentName .
+{{ departmentUri|default("?departmentUri", true) }} a crs-rec:Department ;
+    crs-rec:hasName {{ departmentNameStr|default("?departmentNameStr", true) }} .
