update to handle updated CRO, update to handle course sections

--- a/crex/query_templates/constructors/constructor_degree.sparql.j2
+++ b/crex/query_templates/constructors/constructor_degree.sparql.j2
@@ -1,5 +1,5 @@
 ?degreeUri a crs-rec:Degree ;
     crs-rec:hasName ?degreeNameStr ;
-    crs-rec:hasMajor ?majorUri .
+    crs-rec:hasPlannedMajor ?majorUri .
 
 {% include 'constructors/constructor_major.sparql.j2' %}
