--- a/crex/query_templates/constructors/constructor_plan_of_study.sparql.j2
+++ b/crex/query_templates/constructors/constructor_plan_of_study.sparql.j2
@@ -1,6 +1,6 @@
 ?planOfStudyUri a crs-rec:PlanOfStudy ;
     crs-rec:hasClassYear ?posYearInt ;
-    crs-rec:hasDegree ?degreeUri ;
+    crs-rec:hasPlannedDegree ?degreeUri ;
     crs-rec:hasCompletedCourse ?completedCourseSectionUri ;
     crs-rec:hasOngoingCourse ?ongoingCourseSectionUri ;
     crs-rec:hasPlannedCourse ?plannedCourseSectionUri .
