--- a/crex/query_templates/course_section_by_semester_query.sparql.j2
+++ b/crex/query_templates/course_section_by_semester_query.sparql.j2
@@ -9,6 +9,6 @@
 ?semesterScheduleUri a crs-rec:SemesterSchedule ;
     crs-rec:hasTerm ?semesterTermStr ;
     crs-rec:hasYear ?semesterYearInt .
-?courseSectionUri crs-rec:hasSchedule ?semesterScheduleUri .
+?courseSectionUri crs-rec:hasSemester ?semesterScheduleUri .
     {% include 'models/course_section.sparql.j2' %}
 {% endblock %}
