--- a/crex/query_templates/models/degree.sparql.j2
+++ b/crex/query_templates/models/degree.sparql.j2
@@ -1,4 +1,4 @@
 ?degreeUri crs-rec:hasName ?degreeNameStr ;
-    crs-rec:hasMajor ?majorUri .
+    crs-rec:hasPlannedMajor ?majorUri .
 
 {% include 'models/major.sparql.j2' %}
