various updates to classes and queries

--- a/crex/query_templates/constructors/constructor_course.sparql.j2
+++ b/crex/query_templates/constructors/constructor_course.sparql.j2
@@ -9,7 +9,8 @@
     crs-rec:hasRequiredPrerequisite ?reqPrereqCourseUri ;
     crs-rec:hasRecommendedPrerequisite ?recPrereqCourseUri ;
     crs-rec:hasCorequisite ?coreqCourseUri ;
-    crs-rec:hasOfferedSemesters ?offeredSemester .
+    crs-rec:offerTerm ?courseOfferTerm ;
+    crs-rec:offerPeriod ?courseOfferPeriod .
 
 {% include 'constructors/constructor_course_code.sparql.j2' %}
 {% include 'constructors/constructor_topic_area.sparql.j2' %}
