--- a/crex/query_templates/constructors/constructor_plan_of_study.sparql.j2
+++ b/crex/query_templates/constructors/constructor_plan_of_study.sparql.j2
@@ -5,5 +5,5 @@
     crs-rec:hasOngoingCourse ?ongoingCourseSectionUri ;
     crs-rec:hasPlannedCourse ?plannedCourseSectionUri .
 
-{% include 'constructors/constructor_course_section.sparql.j2' %}
+{# {% include 'constructors/constructor_course_section.sparql.j2' %} #}
 {% include 'constructors/constructor_degree.sparql.j2' %}
