cleanup and general fixes

--- a/escore/query_templates/constructors/constructor_plan_of_study.sparql.j2
+++ b/escore/query_templates/constructors/constructor_plan_of_study.sparql.j2
@@ -1,7 +1,8 @@
 ?planOfStudyUri a crs-rec:PlanOfStudy ;
     crs-rec:hasClassYear ?posYearInt ;
     crs-rec:hasPlannedDegree ?degreeUri ;
-    crs-rec:hasCompletedCourse ?completedCourseSectionUri ;
+    crs-rec:hasCompletedCourseSection ?completedCourseSectionUri ;
+    crs-rec:hasCompletedCourse ?completedCourseUri ;
     crs-rec:hasOngoingCourse ?ongoingCourseSectionUri ;
     crs-rec:hasPlannedCourse ?plannedCourseSectionUri .
 
