--- a/escore/query_templates/models/plan_of_study.sparql.j2
+++ b/escore/query_templates/models/plan_of_study.sparql.j2
@@ -8,6 +8,7 @@
 
 OPTIONAL {
     ?planOfStudyUri crs-rec:hasCompletedCourse ?completedCourseSectionUri .
+    ?completedCourseSectionUri crs-rec:isCourseSectionOf ?completedCourseUri .
 }
 OPTIONAL {
     ?planOfStudyUri crs-rec:hasOngoingCourse ?ongoingCourseSectionUri .
