--- a/escore/query_templates/models/student.sparql.j2
+++ b/escore/query_templates/models/student.sparql.j2
@@ -1,7 +1,9 @@
 ?studentUri crs-rec:hasName ?studentNameStr ;
     crs-rec:hasAdvisor ?advisorUri ;
     crs-rec:hasClassYear ?studentYearInt ;
-    crs-rec:hasStudyPlan ?planOfStudyUri .
+    crs-rec:hasStudyPlan ?planOfStudyUri ;
+    crs-rec:hasInterest ?topicUri .
 
+{% include 'models/topic_area.sparql.j2' %}
 {% include 'models/advisor.sparql.j2' %}
 {% include 'models/plan_of_study.sparql.j2' %}
