--- a/escore/query_templates/constructors/constructor_student.sparql.j2
+++ b/escore/query_templates/constructors/constructor_student.sparql.j2
@@ -2,7 +2,9 @@
     crs-rec:hasName ?studentNameStr ;
     crs-rec:hasAdvisor ?advisorUri ;
     crs-rec:hasClassYear ?studentYearInt ;
+    crs-rec:hasInterest ?topicUri ;
     crs-rec:hasStudyPlan ?planOfStudyUri .
 
 {% include 'constructors/constructor_plan_of_study.sparql.j2' %}
 {% include 'constructors/constructor_advisor.sparql.j2' %}
+{% include 'constructors/constructor_topic_area.sparql.j2' %}
